--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button class="col-3 mr-2 mb-2 item btn btn-secondary border border-light" id="." value=".">.</button>
                     </div>  
                 <div class="col-3">
-                <button class="col-12 mr-2 mb-2 item btn btn-secondary border border-light" id="*" value="/"><b>/</b></button>
+                <button class="col-12 mr-2 mb-2 item btn btn-secondary border border-light" id="/" value="/"><b>/</b></button>
                 <button class="col-12 mr-2 mb-2 item btn btn-secondary border border-light" id="*" value="*"><b>*</b></button>
                 <button class="col-12 mr-2 mb-2 item btn btn-secondary border border-light" id="+" value="+"><b>+</b></button>
                 <button class="col-12 mr-2 mb-2 item btn btn-secondary border border-light" id="-" value="-"><b>-</b></button>    
